# yamp

./: CHANGELOG.md  Cargo.toml  README.md  build-and-package.sh  build-wasm-parser.sh  debug.sh  gh-deploy.sh  profile.sh  setup.sh  yamp.code-workspace
.circleci/: Dockerfile  config.yaml  config.yml  update-docker-image.sh
.devcontainer/: Dockerfile  dev-setup.sh  devcontainer.json
app/: .gitignore  Cargo.toml  main.js  package.json  snowpack.config.js
app/public/: about.html  index.html
app/src-tauri/: tauri.conf.json
app/src/main/: index.js
app/src/renderer/: index.js
parser/: Cargo.toml
parser/src/: lib.rs  section.rs  sub_section.rs
src/: entry.rs  excelwriter.rs  lib.rs  object.rs  section.rs  segment.rs  subsection.rs  xmlwriter.rs
src/cli/: main.rs
tests/: entry-tests.rs  object-tests.rs  parser-tests.rs  section-tests.rs  segment-tests.rs  subsection-tests.rs  test-valid-single-line-subsection.txt  uthelper.rs  xmlwriter-tests.rs
