[package]
name = "parser"
version = "1.0.0"
authors = ["Banu Calin <banucaliniulian@gmail.com>"]
edition = "2018"

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
regex = "1.8.4"
log = "0.4.18"
env_logger = "0.10.0"
xml-rs = "0.8.14"
chrono = "0.4.26"
xlsxwriter = "0.6.0"
rand = "0.8.5"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

[[bin]]
name = "parser"
path = "src/cli/main.rs"
